infrastructure/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: development
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: production
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
