infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spring-boot.local
    http:
      paths:
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app
            port:
              number: 8080
